src/objects/Objectives__c.object
<CustomObject>
    <description>The Objectives of the entity. This should contain all the significant objectives the organization wants to achieve. The Risks to these objectives will be linked so that the Objective Owner is aware of the potential to not achieve the objectives and to be able to take action.</description>
    <fields>
        <fullName>Critical_Success_Factors__c</fullName>
        <description>What needs to occur to ensure this objective is achieved?</description>
        <inlineHelpText>What needs to occur to ensure this objective is achieved?</inlineHelpText>
        <label>Critical Success Factors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Emergency_Plans_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If there are emergency plans prepared to address specific objectives, then a copy of the plan attached.</description>
        <inlineHelpText>Check this box if Emergency plans have been attached to this record.</inlineHelpText>
        <label>Emergency Plans Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extent_Objective_Under_Threat__c</fullName>
        <description>Measure of the extent to which this objective is under threat - i.e. may not be achieved as expected. this is the Objective Owner&apos;s assessment and may be used in reports</description>
        <inlineHelpText>Enter a % value for 0 to 100, - the higher the %, the more likely it is that the Objective will not be met.</inlineHelpText>
        <label>Extent Objective Under Threat</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Objective_Description__c</fullName>
        <description>Describe the Objective, including key components and milestones</description>
        <inlineHelpText>Enter as much detail about the Objective as possible</inlineHelpText>
        <label>Objective Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Objective_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Enables the use of an Objective ID for reporting</description>
        <label>Objective ID</label>
        <length>55</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Objective_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person who has ultimate responsibility for achieving this Objective. May be a delegate.</description>
        <inlineHelpText>Select a person from the Contact list.</inlineHelpText>
        <label>Objective Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Objectives</relationshipLabel>
        <relationshipName>Objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Objective_Target_Date__c</fullName>
        <description>If the Objective has a significant milestone, such as &quot;Become #1 by June 30, 2015&quot; then this field should be completed</description>
        <inlineHelpText>Use this field to record the most significant milestone for this Objective - if there is one. Some Objectives will have no specific milestones.</inlineHelpText>
        <label>Objective Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X10_K_Objective__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If an Objective is stated in the most recent 10-K or similar document (i.e. Annual Report to Investors), then the check box should be selected. This will be used in reporting and dashboards</description>
        <inlineHelpText>If reported in 10-K or similar annual reports, select this box.</inlineHelpText>
        <label>10-K Objective</label>
        <type>Checkbox</type>
    </fields>
    <label>Objectives</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Objectives Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Objectives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>